# BoredCalculator

./: BoredCalculator.cabal  BoredCalculator.hs  LICENSE  README.md  stack.yaml
